<resources>
    <string name="app_name">Weather App</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="temp">%1$d°</string>
    <string name="low_temp">Low %1$d°</string>
    <string name="high_temp">High %1$d°</string>
    <string name="humidity">Humidity %1$d</string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="forecast">Forecast</string>
    <string name="sunrise">Sunrise: %1$s</string>
    <string name="sunset">Sunset: %1$s</string>
    <string name="temp_2">Temp: %1$s°</string>
    <string name="high_2">High: %1$s°</string>
    <string name="low_2">Low: %1$s°</string>
    <string name="zip_code">ZIP Code</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="request">Request Current Location</string>
    <string name="enter_zip">Enter a zip code</string>
    <string name="notification_on">Enable Notifications</string>
    <string name="notification_off">Disable Notifications</string>
    <string name="location_permission_rationale">This app uses your approximate current location to find weather for your location.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>