<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textSize="75sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="48dp"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/feels_like"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/feels_like"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/temp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        />

    <TextView
        android:id="@+id/low_temp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/low_temp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/temp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="35dp"
        />

    <TextView
        android:id="@+id/high_temp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/high_temp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/temp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="65dp"
        android:layout_marginStart="35dp"
        />

    <TextView
        android:id="@+id/humidity"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/humidity"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/temp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="95dp"
        android:layout_marginStart="35dp"
        />

    <TextView
        android:id="@+id/pressure"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/pressure"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/temp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="125dp"
        android:layout_marginStart="35dp"
        />

    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:src="@drawable/sun"
        app:layout_constraintStart_toStartOf="@id/temp"
        app:layout_constraintStart_toEndOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="center"
        android:contentDescription="@null"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/silver"
        android:text="@string/forecast"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/pressure"
        ></Button>


</androidx.constraintlayout.widget.ConstraintLayout>