<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SearchFragment"
    android:id="@+id/searchFragmentXML">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/zipCode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/zip_code"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/search_button"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginHorizontal="115dp"
        android:layout_marginVertical="220dp"
        android:backgroundTint="@color/silver"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/location_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/request"
        android:layout_marginHorizontal="85dp"
        android:layout_marginVertical="320dp"
        android:backgroundTint="@color/silver"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginVertical="100dp"
        android:text="@string/enter_zip"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>